--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 description = "Shorten and obfuscate IDs."
 authors = ["Paweł (bbkr) Pabian"]
 license = "Artistic-2.0"
+repository = "https://github.com/bbkr/SquishyID"
 
 [dependencies]
