--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "squishyid"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "Shorten and obfuscate IDs."
 authors = ["Paweł (bbkr) Pabian"]
 license = "Artistic-2.0"
 repository = "https://github.com/bbkr/SquishyID"
+readme = "README.md"
 
 [dependencies]
